nicer samples, update package.json

--- a/samples/html/dblclick.html
+++ b/samples/html/dblclick.html
@@ -2,14 +2,17 @@
   <head>
     <script src="https://unpkg.com/rxjs/bundles/rxjs.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.14/lodash.min.js"></script>
-    <script src="../../dist/bundles/connective.es5.min.js"></script>
+    <script src="https://unpkg.com/@connective.js/core@0.0.1/dist/bundles/connective.es5.min.js"></script>
   </head>
   <body>
+    <p id="p" style="font-size: 32px"></p>
     <script>
       window.addEventListener('load', () => {
         let { wrap, sequence, map, pipe, filter, group } = connective;
         let { fromEvent } = rxjs;
         let { delay } = rxjs.operators;
+
+        let p = document.getElementById('p');
 
         let buffer = sequence('+', 1);
         let click = wrap(fromEvent(document, 'click'));
@@ -21,7 +24,7 @@
         group(
           count.to(filter(n => n < 2)).to(map(() => 'single')),
           count.to(filter(n => n >= 2)).to(map(() => 'double'))
-        ).subscribe(console.log);
+        ).subscribe(v => p.innerHTML = v);
       });
     </script>
   </body>
