add line copy to docs

--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@ a.send('world!');</code>
       </div>
 
       Every node of such a flow is represented by a
-      <a href="src/pin/pin.ts" target="_blank">Pin</a> (or some <a href="src/pin/pin-like.ts" target="_blank">PinLike</a> object). The <span code>pin()</span>, <span code>source()</span> and <span code>sink()</span> functions all return a <i>Pin</i>.
+      <a href="https://github.com/CONNECT-platform/connective/blob/master/src/pin/pin.ts" target="_blank">Pin</a>
+      (or some
+      <a href="https://github.com/CONNECT-platform/connective/blob/master/src/pin/pin-like.ts" target="_blank">PinLike</a>
+      object). The <span code>pin()</span>, <span code>source()</span> and <span code>sink()</span> functions all return a <i>Pin</i>.
 
       <br><br>
 
@@ -375,7 +378,8 @@ a.send(0);</code>
 
       <span code>pipe()</span> allows you to use any <b>RxJS</b> pipeable operator.
       Note that values are not passed directly to pipeable operators, they are wrapped in
-      <a href="src/shared/emission.ts" target="_blank">Emission</a> objects, and their return value should
+      <a href="https://github.com/CONNECT-platform/connective/blob/master/src/shared/emission.ts" target="_blank">Emission</a>
+      objects, and their return value should
       also be of that type.
 
     </div>
